# devtool_kit

./: .env  Cargo.toml  page.env
src/: app.rs  main.rs
src/db/: db.rs  mod.rs
src/env/: custom_error.rs  env.rs  error.rs  mod.rs
src/gui/: dev_toolkits.rs  hello_world.rs  mod.rs  setting.rs  sidebar.rs
src/gui/page/: bookmark.rs  home.rs  mod.rs  page.rs  page_manager.rs
