[package]
name = "developer-toolkits"
version = "0.1.0"
edition = "2021"

[dependencies]
# Rust GUI Framework
iced = { version = "0.13.1", features = ["image"] }

# ENV Reader
# dotenv = "0.15.0"
#dotenv = { version = "0.15.0", features = ["cli"] }
dotenvy = "0.15.7"

# JSON 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#dir
dirs = "5.0.1"
# sqlite
rusqlite = { version = "0.32.0", features = ["bundled"] }
sqlx = { version = "=0.8.1", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1", features = ["full"] }

